nwxrviewstyle.css
.nwxbar {
    height: 10px;
    border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
    border: 1px solid #333;
    background-size: 10px 10px;
    background-color: #af0;
    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
    background-image: -moz-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
    background-image: linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
    -pie-background: linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent) 0 0 / 5px 5px #ac0;
    behavior: url(/pie/PIE.htc);
}

.nwxrview {
	border-top: 2px dotted #0f0;
	border-right: 2px dotted #0f0;
	padding: 10px;
	margin: 5px;
	height: 100%;
	overflow: hidden;
}

.nwx-total-score {
	text-align: center;
	border-bottom: 3px solid #0f0;
	border-left: 3px solid #0f0;
	color: #0f0;
	width: 25%;
	display: block;
	float: right;
	height: 100px;
}

.nwx-rview-sum {
	border-bottom: 3px solid #0f0;
	border-right: 3px solid #0f0;
	float: left;
	display: block;
	width: 73%;
	height: 100px;
}

